fix: alignment issues with contact section

--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -26,7 +26,7 @@ main {
     max-width: 40em;
     margin: auto;
     text-align: left;
-    height: 70vh;
+    height: 75vh;
     color: white;
 }
 h1 {
@@ -113,13 +113,14 @@ footer .phone {
         justify-content: space-between;
         align-items: start;
         text-align: left;
-        width: 100%;
+        width: 80%;
         margin: auto;
             flex-basis: 100%;
     }
     footer section div:first-child p {
         width: 16em;
         margin: 2em 0;
+        line-height: 28px;
     }
     footer h4 {
         font-size: 20px;
@@ -128,10 +129,12 @@ footer .phone {
     }
     footer li {
         list-style-type: none;
-        line-height: 25px;
+        line-height: 36px;
     }
     footer .rights {
+        width: 80%;
         text-align: left;
+        margin: 2em auto;
     }
     footer .social-links img{
         width: 24px;
